@@ -1,0 +1,10 @@
+BEGIN {
+	RS = ""
+	FPAT = "\\w+"
+}
+
+{
+	print
+	$2 = "-"
+	print
+}
