@@ -1,3 +1,8 @@
+2020-04-10         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test, fpat8.
+	* fpat8.awk, fpat8.in, fpat8.ok: New files.
+
 2020-04-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): New test, rsnulw.
